# splinter

./: README.md  SETUP.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: agent.mdx  gateway.mdx  types.mdx  workflow.mdx
docs/concepts/: control-layer.mdx  coordination-layer.mdx  gateway.mdx  the-flow.mdx
docs/control/: budget-limits.mdx  circuit-breakers.mdx  custom-rules.mdx  decision-enforcement.mdx  loop-detection.mdx  memory-limits.mdx  overview.mdx  rate-limiting.mdx  retry-strategy.mdx  rollback.mdx  step-limits.mdx  time-limits.mdx  tool-access.mdx
docs/coordination/: action-eligibility.mdx  chain-awareness.mdx  checkpointing.mdx  completion-signals.mdx  goal-tracking.mdx  overview.mdx  schema-validation.mdx  shared-state.mdx  state-ownership.mdx  wait-tracking.mdx
docs/guides/: custom-agents.mdx  multi-agent.mdx  single-agent.mdx
examples/: control_layer_demo.py  research_pipeline.py  simple.py
splinter/: __init__.py  simple.py
splinter/control/: limits.py  loop_detection.py  memory.py  rules.py  tool_access.py
splinter/coordination/: __init__.py  checkpoint.py  ownership.py  schema.py  state.py
splinter/gateway/: __init__.py  gateway.py
splinter/gateway/providers/: anthropic.py  base.py  gemini.py  grok.py  mock.py  openai.py
splinter/utils/: __init__.py  logging.py
splinter/workflow/: agent.py  workflow.py
src/splinter/: __init__.py  client.py  exceptions.py  schemas.py
src/splinter/cloud/: __init__.py  client.py  commands.py  sync.py
src/splinter/control/: __init__.py  circuit_breaker.py  decisions.py  limits.py  loop_detection.py  memory.py  rate_limit.py  retry.py  tool_access.py
src/splinter/coordination/: checkpoint.py  schema.py  (+3 more)
tests/: __init__.py  pressure_test.py  test_cloud.py  test_control.py  test_coordination.py  test_custom_agents.py  test_features_with_api.py  test_integration.py  test_new_features.py
(+11 files in other folders)
